# Tenx-week2-automaton-auditor

./: .env.example  ARCHITECTURE_NOTES.md  README.md  SUBMISSION_REPORT.md  pyproject.toml
audit/: report_20260225_151208.md  report_20260225_151301.md  report_20260225_151423.md  report_20260225_174202.md  report_20260227_125725.md  report_20260227_130048.md  report_20260227_130506.md  report_20260227_130759.md  report_20260227_131348.md  report_20260227_131807.md  report_20260227_134149.md  report_20260228_112024.md  report_20260228_123122_peer_audit.md  report_20260228_123122_peer_received.md  report_20260228_123122_self_audit.md  report_20260228_123122_summary.md  report_20260228_123311.json  report_20260228_123311_peer_audit.md  report_20260228_123311_peer_received.md  report_20260228_123311_self_audit.md  report_20260228_123311_summary.md
docker/: Dockerfile
rubric/: week2_rubric.json
src/: graph.py  state.py
src/automaton_auditor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nodes/: __init__.py  detectives.py  judges.py  justice.py
src/tools/: __init__.py  ast_tools.py  git_tools.py  pdf_tools.py  vision_tools.py
src/utils/: __init__.py  rubric_loader.py  sandbox.py
